--- a/frontend/src/pages/choose-investigator/choose-investigator.module.css
+++ b/frontend/src/pages/choose-investigator/choose-investigator.module.css
@@ -26,6 +26,13 @@
   border-radius: var(--rounded);
 }
 
-.choose-investigator-button {
+.choose-investigator-buttons {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 0.25rem;
   margin-right: 0.375rem;
+}
+
+.choose-investigator-button {
+  flex-shrink: 0;
 }
