--- a/frontend/src/pages/deck-draft/deck-draft.module.css
+++ b/frontend/src/pages/deck-draft/deck-draft.module.css
@@ -324,7 +324,7 @@
 }
 
 .customization-upgrade-wrapper .customization {
-  font-size: var(--text-2xs);
+  font-size: var(--text-xs);
   padding: 0.5rem;
   border: 1px solid var(--palette-1);
   background: var(--palette-point-five);
@@ -336,6 +336,7 @@
   flex: 0 0 calc(var(--customization-xp, 0) * 1rem + 0.25rem);
   gap: 0.125rem;
   transform: translateY(0.125rem);
+  pointer-events: none;
 }
 
 .customization-upgrade-wrapper .content {
@@ -350,6 +351,11 @@
 }
 
 .customization-helper-text {
+  font-size: var(--text-xs);
+  margin-top: 0.25rem;
+  font-style: italic;
+  text-align: left;
+  padding: 0 0.5rem;
   color: var(--palette-6);
   line-height: 1.3;
 }
@@ -357,10 +363,12 @@
 .card-image-container {
   position: relative;
   width: 100%;
+  height: 100%;
 }
 
 .card-image-container > * {
   width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 768px) {
